--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>mockito-core</artifactId>
             <version>4.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
